--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,14 @@
     <modules>
         <module>reactive</module>
         <module>demo</module>
+        <module>jbcd</module>
     </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compailer.source>1.8</maven.compailer.source>
+        <maven.compailer.target>1.8</maven.compailer.target>
+    </properties>
 
     <build>
         <plugins>
@@ -19,8 +26,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
